--- a/Frontend/src/css/styles.css
+++ b/Frontend/src/css/styles.css
@@ -12,6 +12,8 @@ html {
   
     color: var(--dark);
     font: 20px/1 sans-serif;
+    margin: 0;
+    padding: 0;
   }
 
   a {
@@ -32,8 +34,7 @@ html {
     /* justify-content: space-between; */
     padding:  .5rem;
     flex-wrap: wrap;
-    top:0;
-    width:100%;
+    position: sticky;
   }
   
   .main-header__title {
@@ -59,8 +60,24 @@ html {
   .nav__list-item:last-child {
     margin-right: 0;
   }
+.content-block{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.content-block__title {
+    text-transform: uppercase;
+}
+.conferenceEntry__image{
+    width: 100px;
+}
+
+
   .main-footer {
     position: absolute;
     bottom: 0;
     width: 100%;
+    position: sticky;
+    background-color: #003a73;
+    color: #FCF7FF;
    }
